[A]1. 添加日志支持 2.添加服务端接口

--- a/ks-client/pom.xml
+++ b/ks-client/pom.xml
@@ -16,6 +16,10 @@
 
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.infi</groupId>
+            <artifactId>ks-common</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
