--- a/ks-server/pom.xml
+++ b/ks-server/pom.xml
@@ -15,6 +15,10 @@
     <url>http://maven.apache.org</url>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.infi</groupId>
+            <artifactId>ks-common</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
