--- a/ks-server/pom.xml
+++ b/ks-server/pom.xml
@@ -15,10 +15,11 @@
     <url>http://maven.apache.org</url>
 
     <dependencies>
+
         <dependency>
             <groupId>com.infi</groupId>
             <artifactId>ks-common</artifactId>
-            <version>${project.parent.version}</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
